Build scaffolding, taskfiles, postgres deploy
Signed-off-by: jphillips <josh.phillips@fearnworks.com>

--- a/modules/odr_core/Taskfile.yml
+++ b/modules/odr_core/Taskfile.yml
@@ -3,6 +3,7 @@ version: '3'
 tasks:
 
   test:
+    desc: Run tests for the core module
     cmds:
       - python ${ROOT_DIR}/modules/odr_core/tests/test_database.py
       - python ${ROOT_DIR}/modules/odr_core/tests/test_config.py
@@ -11,9 +12,11 @@ tasks:
       - python ${ROOT_DIR}/modules/odr_core/tests/test_content_model.py
 
   test-db:
+    desc: Run tests for the database manager
     cmds:
       - python ${ROOT_DIR}/modules/odr_core/tests/test_db_manager.py
 
   migrate:
+    desc: Migrate the database  
     cmds:
       - alembic -c ./modules/odr_core/alembic.ini upgrade head
