Added Basic Auth and JWT Auth
Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,8 @@ POSTGRES_USER=opendatarepository
 POSTGRES_PASSWORD=opendatarepository
 POSTGRES_PORT=35432
 TEST_POSTGRES_DB=test_opendatarepository
+
+## JWT
+JWT_SECRET=jwtsupersecret
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_SECONDS=3600
