Add specific versions to requirements for consistency and controlled updates.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/modules/odr_core/requirements.txt
+++ b/modules/odr_core/requirements.txt
@@ -1,10 +1,10 @@
-alembic
-sqlalchemy
-pydantic
-pydantic-settings
-pytest
-loguru
+alembic==1.13.2
+sqlalchemy==2.0.31
+pydantic==2.8.2
+pydantic-settings==2.4.0
+pytest==8.3.2
+loguru==0.7.2
 
 # auth
-argon2-cffi
-pyjwt
+argon2-cffi==23.1.0
+pyjwt==2.9.0
