--- a/modules/odr_api/requirements.txt
+++ b/modules/odr_api/requirements.txt
@@ -1,8 +1,8 @@
-uvicorn
-fastapi
-pydantic[email]
-sqlalchemy
-pytest
-starlette
-psycopg2-binary
-python-multipart
+uvicorn==0.30.5
+fastapi==0.112.0
+pydantic[email]==2.8.2
+sqlalchemy==2.0.31
+pytest==8.3.2
+starlette==0.37.2
+psycopg2-binary==2.9.9
+python-multipart==0.0.9
