Added creation of default superuser Added login sessions Added login/logout endpoints Added commands for albemic revision and downgrade
Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

--- a/modules/odr_datamodel/Taskfile.yml
+++ b/modules/odr_datamodel/Taskfile.yml
@@ -6,3 +6,13 @@ tasks:
     desc: Migrate the database  
     cmds:
       - alembic -c ./modules/odr_datamodel/alembic.ini upgrade head
+
+  revision:
+    desc: Create a new revision, e.g. task data:revision -- "Add new column"
+    cmds:
+      - alembic -c ./modules/odr_datamodel/alembic.ini revision --autogenerate -m "{{.CLI_ARGS}}"
+
+  downgrade:
+    desc: Downgrade the database
+    cmds:
+      - alembic -c ./modules/odr_datamodel/alembic.ini downgrade -1
