--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,11 @@ TEST_POSTGRES_DB=test_opendatarepository
 JWT_SECRET=jwtsupersecret
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION_SECONDS=3600
+
+## Session
+SESSION_MAX_AGE_SECONDS=4233600  # 4 weeks
+
+## Default Superuser
+DEFAULT_SUPERUSER_EMAIL=opendatarepository@opendatarepository.com
+DEFAULT_SUPERUSER_PASSWORD=opendatarepository
+DEFAULT_SUPERUSER_USERNAME=opendatarepository
