--- a/.env.template
+++ b/.env.template
@@ -14,7 +14,7 @@ JWT_ALGORITHM=HS256
 JWT_EXPIRATION_SECONDS=3600
 
 ## Session
-SESSION_MAX_AGE_SECONDS=4233600  # 4 weeks
+SESSION_MAX_AGE_SECONDS=4233600
 
 ## Default Superuser
 DEFAULT_SUPERUSER_EMAIL=opendatarepository@opendatarepository.com
