Expose the PGADMIN_DEFAULT_EMAIL and PGADMIN_DEFAULT_PASSWORD to env variables so they are easier to find or overwrite.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.env.template
+++ b/.env.template
@@ -8,6 +8,10 @@ POSTGRES_PASSWORD=opendatarepository
 POSTGRES_PORT=35432
 TEST_POSTGRES_DB=test_opendatarepository
 
+# PGADMIN
+PGADMIN_DEFAULT_EMAIL=admin@example.com
+PGADMIN_DEFAULT_PASSWORD=admin
+
 ## JWT
 JWT_SECRET=jwtsupersecret
 JWT_ALGORITHM=HS256
