--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,6 +6,7 @@ includes:
   db: ./modules/odr_database/Taskfile.yml
   core: ./modules/odr_core/Taskfile.yml
   data: ./modules/odr_datamodel/Taskfile.yml
+  frontend: ./modules/odr_frontend/Taskfile.yml
 
 dotenv: ['.env', '{{.ENV}}/.env', '{{.HOME}}/.env']
 vars:
@@ -31,6 +32,7 @@ tasks:
         platforms: [linux, darwin]
       - cmd: docker network inspect omi-network >/dev/null 2>&1 || docker network create omi-network
       - cmd: task setup-venv
+      - cmd: task frontend:install
 
   setup-venv:
     desc: Setup the virtual environment
@@ -54,6 +56,7 @@ tasks:
       - |
         task db:start-postgres &
         task api:start &
+        task frontend:dev &
         wait
       - echo "All services started"
   stop-all:
