Update with Github recommended VSCode .gitignore (https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore)
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,20 @@ venv.bak/
 .ipynb_checkpoints/
 
 # IDEs and editors
-.vscode/
 .idea/
 *.iml
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 # Build artifacts
 build/
