Switch to better default identifier of photoid, make num samples dynamic.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/hugging_face/mappings/common-canvas_commoncatalog-cc-by-sa_mapping.json
+++ b/hugging_face/mappings/common-canvas_commoncatalog-cc-by-sa_mapping.json
@@ -1,7 +1,7 @@
 {
   "dataset_name": "common-canvas/commoncatalog-cc-by-sa",
   "field_mapping": {
-    "id": "uid",
+    "id": "photoid",
     "name": "title",
     "width": "width",
     "height": "height",
