Add combined smoke_tests task to run API and PostgreSQL tests together
Signed-off-by: Prateek Kumar <85689959+PrateekKumar1709@users.noreply.github.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -87,3 +87,9 @@ tasks:
         task api:watch-api-logs &
         wait
       - echo "All logs watched"
+
+  smoke_tests:
+    desc: Run smoke tests for both API and PostgreSQL
+    cmds:
+      - task api-test:test_api
+      - task db:test-postgres
