Update API smoke test name (health-check) in the main Taskfile
Signed-off-by: Prateek Kumar <85689959+PrateekKumar1709@users.noreply.github.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -91,5 +91,5 @@ tasks:
   smoke_tests:
     desc: Run smoke tests for both API and PostgreSQL
     cmds:
-      - task api-test:test_api
+      - task api-test:health-check
       - task db:test-postgres
