Make updates to support pixelprose, multiple annotations, confirming mappings, make private dataset name properly dynamic, track original caption field for now, and add example pixelprose data.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/hugging_face/mappings/common-canvas_commoncatalog-cc-by-sa_mapping.json
+++ b/hugging_face/mappings/common-canvas_commoncatalog-cc-by-sa_mapping.json
@@ -12,6 +12,8 @@
     "contentAuthor": "unickname",
     "url": "url",
     "image": "jpg",
-    "annotation": "blip2_caption"
+    "annotations": [
+      "blip2_caption"
+    ]
   }
 }
