Add code coverage to odr_core
Signed-off-by: Robert Cronin <robert.cronin@uqconnect.edu.au>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -17,6 +17,11 @@ vars:
     sh: echo ${ROOT_DIR}/.env
 
 tasks:
+  default:
+    desc: List all the tasks
+    cmds:
+      - task --list
+
   echo-project-root:
     desc: Echo the project root directory. Helps ensure environment is set up and tasks will run.
     cmds:
