Fix issues mapping files, edge case issues, and add additional test calls to readme.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/hugging_face/mappings/tomg-group-umd_pixelprose_mapping.json
+++ b/hugging_face/mappings/tomg-group-umd_pixelprose_mapping.json
@@ -11,7 +11,7 @@
     "licenseUrl": null,
     "contentAuthor": "author",
     "url": "url",
-    "image": "image_id",
+    "image_column": "image_id",
     "annotations": [
       "original_caption",
       "vlm_caption"
