--- a/hugging_face/mappings/common-canvas_commoncatalog-cc-by-sa_mapping.json
+++ b/hugging_face/mappings/common-canvas_commoncatalog-cc-by-sa_mapping.json
@@ -11,7 +11,7 @@
     "licenseUrl": "licenseurl",
     "contentAuthor": "unickname",
     "url": "url",
-    "image": "jpg",
+    "image_column": null,
     "annotations": [
       "blip2_caption"
     ]
