Updating to use logging module and fix pixelprose mapping file.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/hugging_face/datasets/mappings/tomg-group-umd_pixelprose_mapping.json
+++ b/hugging_face/datasets/mappings/tomg-group-umd_pixelprose_mapping.json
@@ -11,7 +11,7 @@
     "licenseUrl": null,
     "contentAuthor": null,
     "url": "url",
-    "image_column": "image_id",
+    "image_column": null,
     "annotations": [
       "original_caption",
       "vlm_caption"
