Add container for frontend, update environment handling for docker internal network
Signed-off-by: jphillips <josh.phillips@fearnworks.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,9 @@
             "username": "opendatarepository",
             "database": "opendatarepository"
         }
+    ],
+    "basedpyright.analysis.extraPaths": [
+        "./modules/odr_api/",
+        "./modules/odr_core/"
     ]
 }
