--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite dev --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview",
     "test": "npm run test:integration && npm run test:unit",
@@ -25,6 +25,7 @@
     "@tailwindcss/typography": "0.5.14",
     "@types/eslint": "^9.6.0",
     "@types/node": "22.2.0",
+    "dotenv": "^16.0.3",
     "autoprefixer": "10.4.20",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -35,12 +36,14 @@
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "sveltekit-superforms": "^2.17.0",
     "tailwindcss": "3.4.10",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.3",
     "vite-plugin-tailwind-purgecss": "0.3.3",
-    "vitest": "^2.0.0"
+    "vitest": "^2.0.0",
+    "zod": "^3.23.8"
   },
   "type": "module",
   "dependencies": {
