--- a/.env.template
+++ b/.env.template
@@ -36,4 +36,4 @@ GITHUB_CLIENT_SECRET=github_client_secret
 DISCORD_CLIENT_ID=discord_client_id
 DISCORD_CLIENT_SECRET=discord_client_secret
 
-OAUTH2_REDIRECT_PATH=/
+OAUTH2_REDIRECT_PATH=docs
