Add initial DCO acceptance page, endpoints, and update handler to require it.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,8 @@
 		// Docker
 		"ms-azuretools.vscode-docker",
 		// Prettier
-		"esbenp.prettier-vscode"
+		"esbenp.prettier-vscode",
+		// Svelte
+		"svelte.svelte-vscode"
 	]
 }
