--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,15 +21,8 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@example.com}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
       PGADMIN_LISTEN_ADDRESS: 0.0.0.0
-      PGADMIN_CONFIG_SERVER_MODE: "False"
-      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
     entrypoint: /bin/sh -c "chmod 600 /pgpass; /entrypoint.sh;"
     user: root
-    configs:
-      - source: servers.json
-        target: /pgadmin4/servers.json
-      - source: pgpass
-        target: /pgpass
     volumes:
       - pgadmin_data:/var/lib/pgadmin
     ports:
@@ -51,6 +44,10 @@ services:
       - omi-network
     depends_on:
       - postgres
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      ENVIRONMENT: DOCKER
     develop:
       watch:
         - action: sync
@@ -69,6 +66,7 @@ services:
       dockerfile: docker/Dockerfile.frontend.dev
     volumes:
       - ./modules/odr_frontend:/app
+      - ./modules/odr_frontend/docker/entrypoint.sh:/app/docker/entrypoint.sh
       - odr_frontend_node_modules:/app/node_modules
       - odr_frontend_pnpm_store:/app/.pnpm-store
     ports:
@@ -99,19 +97,3 @@ networks:
   omi-network:
     external: true
     driver: bridge
-
-configs:
-  pgpass:
-    content: postgres:35432:${POSTGRES_DB}:${POSTGRES_USER}:${POSTGRES_PASSWORD}
-  servers.json:
-    content: |
-      {"Servers": {"1": {
-        "Group": "Servers",
-        "Name": "Open Data Repository",
-        "Host": "postgres",
-        "Port": 35432,
-        "MaintenanceDB": "postgres",
-        "Username": "${POSTGRES_USER}",
-        "PassFile": "/pgpass",
-        "SSLMode": "prefer"
-      }}}
