--- a/modules/odr_frontend/template.env
+++ b/modules/odr_frontend/template.env
@@ -1,2 +1,11 @@
 PUBLIC_API_BASE_URL=http://localhost:31100
 API_SERVICE_URL=http://odr-api:31100
+AUTH_SECRET=authsecret
+GOOGLE_CLIENT_ID=google_client_id
+GOOGLE_CLIENT_SECRET=google_client_secret
+
+GITHUB_CLIENT_ID=github_client_id
+GITHUB_CLIENT_SECRET=github_client_secret
+
+DISCORD_CLIENT_ID=github_client_id
+DISCORD_CLIENT_SECRET=discord_client_secret
