--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -48,6 +48,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/core": "^0.35.0",
 		"@auth/pg-adapter": "^1.5.0",
 		"@auth/sveltekit": "^1.5.0",
 		"@floating-ui/dom": "1.6.10",
