--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: convictional/trigger-workflow-and-wait@v1.6.1
         with:
-          owner: civitai
-          repo: ansible-omi
+          owner: Open-Model-Initiative
+          repo: data-pipeline-ansible
           workflow_file_name: deploy.yaml
           github_token: ${{ secrets.GHA_WORKFLOW_TRIGGER }}
           ref: main
