Add missing requirements and other fixes for new HDR image and hugging face endpoints.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.env.template
+++ b/.env.template
@@ -37,3 +37,7 @@ DISCORD_CLIENT_ID=discord_client_id
 DISCORD_CLIENT_SECRET=discord_client_secret
 
 OAUTH2_REDIRECT_PATH=docs
+
+## Hugging Face
+HF_TOKEN=your_access_token
+HF_HDR_DATASET_NAME=openmodelinitiative/hdr-submissions
