Initial cleanup of the users/teams/auth endpoints.
Signed-off-by: Tomislaw <tomislaw2.0@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
     "basedpyright.analysis.extraPaths": [
         "./modules/odr_api/",
         "./modules/odr_core/"
+    ],
+    "python.analysis.extraPaths": [
+        "./modules/odr_core"
     ]
 }
