Update to use exiftool for metadata removal.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/modules/odr_api/docker/Dockerfile.api
+++ b/modules/odr_api/docker/Dockerfile.api
@@ -1,7 +1,11 @@
 # Build stage
 FROM python:3.11-slim-bookworm
 
-RUN apt-get update && apt-get install -y gcc && rm -rf /var/lib/apt/lists/*
+# Install system dependencies including exiftool and build-essential
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    exiftool \
+    && rm -rf /var/lib/apt/lists/*
 
 ENV PYTHONUNBUFFERED=1 \
     DEBIAN_FRONTEND=noninteractive \
@@ -14,7 +18,7 @@ WORKDIR /app
 # Copy requirements file
 COPY modules/odr_api/requirements.txt .
 
-# Install dependencies
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt --extra-index-url https://download.pytorch.org/whl/cu124
 
 COPY modules/odr_core /app/modules/odr_core
@@ -31,7 +35,7 @@ ENV PYTHONPATH=/app:/app/modules:$PYTHONPATH
 
 # Expose the port the app runs on
 EXPOSE 31100
+
 # Set the entrypoint
-# CMD ["tail", "-f", "/dev/null"]
 ENTRYPOINT ["uvicorn"]
 CMD ["odr_api.app:app", "--host", "0.0.0.0", "--port", "31100", "--reload"]
