Add step to create docker network as we rely on it being external.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -49,6 +49,8 @@ jobs:
           PGADMIN_DEFAULT_EMAIL=pipeline@example.com
           PGADMIN_DEFAULT_PASSWORD=pipeline
           EOF
+      - name: Create Docker network
+        run: docker network inspect omi-network >/dev/null 2>&1 || docker network create omi-network
       - name: Run Playwright tests
         working-directory: .
         run: |
