Add ROOT_DIR and MODEL_CACHE_DIR too.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,6 +31,9 @@ jobs:
         working-directory: .
         run: |
           cat << EOF > .env
+          ROOT_DIR=.
+          MODEL_CACHE_DIR=
+
           POSTGRES_HOST=localhost
           POSTGRES_DB=odr_pipeline
           POSTGRES_USER=odr_pipeline
