Improve startup time for Playwright tests, fix report path.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -104,5 +104,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: modules/odr_frontend/playwright-report/
           retention-days: 7
