--- a/modules/odr_caption/vllm_deploy/models/docker/Dockerfile.qwen
+++ b/modules/odr_caption/vllm_deploy/models/docker/Dockerfile.qwen
@@ -6,11 +6,11 @@ WORKDIR /vllm-workspace
 
 # Install additional dependencies for Qwen models
 RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install git+https://github.com/huggingface/transformers@21fac7abba2a37fae86106f87fcf9974fd1e3830 \
-    accelerate \
+    pip install accelerate \
+    bitsandbytes>=0.44.0 \
+    git+https://github.com/huggingface/transformers@21fac7abba2a37fae86106f87fcf9974fd1e3830 \
     hf_transfer \
     'modelscope!=1.15.0' \
-    bitsandbytes>=0.44.0 \
     timm==0.9.10
 # Install flash-attn separately
 # RUN pip install --no-cache-dir flash-attn --no-build-isolation
