constrain watch+sync
Signed-off-by: jphillips <josh.phillips@fearnworks.com>

--- a/modules/odr_caption/docker/caption.docker-compose.yml
+++ b/modules/odr_caption/docker/caption.docker-compose.yml
@@ -15,12 +15,11 @@ services:
               capabilities: [gpu]
     volumes:
       - ${HF_HOME}:/models
-      - ../odr_caption:/app/odr_caption
       - ../local/cache:/root/.cache/
     environment:
       - HF_HOME=/models
     develop:
       watch:
         - action: sync
-          path: ..
-          target: /app
+          path: ../odr_caption
+          target: /app/odr_caption
