--- a/modules/odr_caption/docker/Dockerfile.caption
+++ b/modules/odr_caption/docker/Dockerfile.caption
@@ -20,18 +20,12 @@ RUN apt-get update && apt-get install -y \
     python3.11 \
     python3.11-dev \
     python3.11-venv \
-    && rm -rf /var/lib/apt/lists/*
-
-# Set Python 3.11 as default
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 \
+    && rm -rf /var/lib/apt/lists/* \
+    && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 \
     && update-alternatives --set python3 /usr/bin/python3.11 \
-    && ln -sf /usr/bin/python3 /usr/bin/python
-
-# Upgrade pip
-RUN python3 -m pip install --upgrade pip
-
-# Install PyTorch with CUDA support
-RUN pip3 install torch torchvision
+    && ln -sf /usr/bin/python3 /usr/bin/python \
+    && python3 -m pip install --upgrade pip \
+    && pip3 install torch torchvision
 
 WORKDIR /app
 
