--- a/modules/odr_caption/docker/Dockerfile.caption
+++ b/modules/odr_caption/docker/Dockerfile.caption
@@ -31,13 +31,14 @@ WORKDIR /app
 
 # Install dependencies
 COPY ./requirements.txt /app/requirements.txt
-RUN pip3 install -r /app/requirements.txt
-RUN pip3 install flash-attn --no-build-isolation
+RUN pip3 install -r /app/requirements.txt \
+    && pip3 install flash-attn --no-build-isolation
 
 # Copy application code
 COPY . /app
-RUN pip3 install --no-cache-dir -e /app
-RUN pip3 install git+https://github.com/dottxt-ai/outlines --upgrade
+RUN pip3 install --no-cache-dir -e /app \
+    && pip3 install git+https://github.com/dottxt-ai/outlines --upgrade
+
 # Set Python path to include the modules
 ENV PYTHONPATH=/app:/app/modules:$PYTHONPATH
 
