--- a/modules/odr_caption/docker/Dockerfile.caption
+++ b/modules/odr_caption/docker/Dockerfile.caption
@@ -1,5 +1,5 @@
 # Build stage
-FROM nvidia/cuda:12.4.0-devel-ubuntu22.04 as base
+FROM nvidia/cuda:12.4.0-devel-ubuntu22.04 AS base
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1 \
