--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,10 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
         args: ['--maxkb=2000']
+    # -   id: check-file-contents
+    #     name: Check SPDX license identifier
+    #     files: \.(py|js|ts|sh|bat|cmd|html|xml|java|c|cpp|cs|yaml|yml)$
+    #     content: 'SPDX-License-Identifier: Apache-2.0'
 -   repo: https://github.com/pycqa/flake8
     rev: 7.1.1
     hooks:
