--- a/modules/odr_caption/docker/Dockerfile.caption
+++ b/modules/odr_caption/docker/Dockerfile.caption
@@ -1,35 +1,28 @@
 FROM vllm/vllm-openai:v0.6.4.post1
 
-# Create a non-root user and set up cache directory
-RUN groupadd -r appuser && useradd -r -g appuser appuser \
-    && mkdir -p /home/appuser/.cache \
-    && chown -R appuser:appuser /home/appuser
+# Create a non-root user and set up directories
+RUN useradd -m -s /bin/bash appuser \
+    && mkdir -p /cache/HF_HOME  /cache/local_cache /app /vllm-workspace /cache/HF_HOME/.hub /cache/HF_HOME/hub/.locks \
+    && chmod -R 777 /cache  \
+    && chown -R appuser:appuser /cache /app /vllm-workspace \
+    && chmod -R 775 /app /vllm-workspace
 
 ENV VLLM_VERSION=v0.6.4.post1
 ENV DO_NOT_TRACK=1
-
+ENV HF_HOME=/cache/HF_HOME
 # Install dependencies
-COPY ./requirements.txt /app/requirements.txt
+COPY --chown=appuser:appuser ./requirements.txt /app/requirements.txt
 
 # Copy application code
-COPY . /app
+COPY --chown=appuser:appuser . /app
 RUN pip3 install --no-cache-dir -e /app \
-    && pip3 install git+https://github.com/dottxt-ai/outlines --upgrade \
-    && chown -R appuser:appuser /app \
-    && mkdir -p /vllm-workspace \
-    && chown -R appuser:appuser /vllm-workspace
+    && pip3 install git+https://github.com/dottxt-ai/outlines --upgrade
 
-# Set Python path to include the modules
-ENV PYTHONPATH=/app:/app/modules:$PYTHONPATH
-
-# Set cache directory environment variable
-ENV TRANSFORMERS_CACHE=/vllm-workspace/cache
+# Copy and set permissions for entrypoint script
+COPY --chmod=775 --chown=appuser:appuser endpoints-entrypoint.sh entrypoint.sh
 
 # Expose the port the app runs on
 EXPOSE 32100
-
-COPY --chmod=775 endpoints-entrypoint.sh entrypoint.sh
-RUN chown appuser:appuser entrypoint.sh
 
 # Switch to non-root user
 USER appuser
