--- a/modules/odr_caption/docker/caption.docker-compose.yml
+++ b/modules/odr_caption/docker/caption.docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: ..
       dockerfile: ./docker/Dockerfile.caption
+    user: "${UID:-1000}:${GID:-1000}"
     ports:
       - 32100:32100
     deploy:
@@ -15,10 +16,12 @@ services:
               count: all
               capabilities: [gpu]
     volumes:
-      - ${HF_HOME:-~/.cache}:/models
-      - ../local/cache:/root/.cache/
+      - ${HF_HOME:-~/.cache}:/cache/HF_HOME
+      - ../local/cache:/cache/local_cache
     environment:
-      - HF_HOME=/models
+      - HF_HOME=/cache/HF_HOME
+      - ODR_TEXT_MODEL=${ODR_TEXT_MODEL:-Qwen/Qwen2.5-14B-Instruct-GPTQ-Int8}
+      - ODR_VISION_MODEL=${ODR_VISION_MODEL:-mistral-community/pixtral-12b}
     develop:
       watch:
         - action: sync
