Fix issues of outdated/conflicting pydantic versions, and fix issues with enum for user type in add_content_source file. Align frontend to also use .env.template and update getting started with some of the new instructions. Remove local setup where it is not needed as we use docker for development.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -34,7 +34,7 @@ tasks:
         platforms: [linux, darwin]
       - cmd: docker network inspect omi-network >/dev/null 2>&1 || docker network create omi-network
       - cmd: task setup-venv
-      - cmd: task frontend:install
+      - cmd: task frontend:install-dev
 
   setup-venv:
     desc: Setup the virtual environment
