--- a/modules/odr_frontend/Taskfile.yml
+++ b/modules/odr_frontend/Taskfile.yml
@@ -8,6 +8,10 @@ tasks:
     dir: '{{.ROOT_DIR}}/modules/odr_frontend'
     cmds:
       - pnpm install
+  install-dev:
+    desc: Install development dependencies
+    dir: '{{.ROOT_DIR}}/modules/odr_frontend'
+    cmds:
       - pnpm exec playwright install
   test:
     desc: Run unit and integration tests
