--- a/modules/odr_frontend/.env.template
+++ b/modules/odr_frontend/.env.template
@@ -1,6 +1,8 @@
 PUBLIC_API_BASE_URL=http://localhost:31100
 API_SERVICE_URL=http://odr-api:31100
+
 AUTH_SECRET=authsecret
+
 GOOGLE_CLIENT_ID=google_client_id
 GOOGLE_CLIENT_SECRET=google_client_secret
 
@@ -9,3 +11,15 @@ GITHUB_CLIENT_SECRET=github_client_secret
 
 DISCORD_CLIENT_ID=github_client_id
 DISCORD_CLIENT_SECRET=discord_client_secret
+
+## Postgres
+POSTGRES_HOST=postgres
+POSTGRES_DB=opendatarepository
+POSTGRES_USER=opendatarepository
+POSTGRES_PASSWORD=opendatarepository
+POSTGRES_PORT=5432
+TEST_POSTGRES_DB=test_opendatarepository
+
+## Docker compose variables
+NODE_ENV=development
+UPLOAD_DIR=./uploads
